# chatbot-collections

./: README.md
discord-bot/: README.md  pyproject.toml
discord-bot/app/: commands.py  main.py  settings.py
line-bot-fastapi/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  skaffold.yaml
line-bot-fastapi/app/: main.py  settings.py
line-bot-fastapi/deploy/production/: service.yaml
slack-bot/: README.md  pyproject.toml  skaffold.yaml
slack-bot/app/: main.py  settings.py  slack-requests-example.py
slack-bot/deploy/production/: service.yaml
telegram-bot/: README.md  pyproject.toml
telegram-bot/app/: gcp_secrets.py  main.py  settings.py
webex-bot/: Dockerfile  README.md  pyproject.toml
webex-bot/app/: commands.py  main.py  settings.py
webex-bot/app/helpers/: adaptive_cards.py  f1api.py
webex-bot/cards/: input.json
whatsapp-bot/: Dockerfile  README.md  pyproject.toml  skaffold.yaml
whatsapp-bot/app/: main.py  settings.py
whatsapp-bot/app/helpers/: whatsappapi.py
whatsapp-bot/deploy/production/: service.yaml
