[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [" "]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

pydantic = "^1.10.4"
requests = "^2.31.0"
discord-webhook  = "1.3.0"
py-cord = "2.4.1"
emoji = "^2.9.0"

google-cloud-secret-manager = "^2.16.3"
google-cloud-logging = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
